# python-uv-boilerplate

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml
